--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Untitled Document</title>
+<link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
