--- a/contact.html
+++ b/contact.html
@@ -1,69 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Bootstrap 101 Template</title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+<!-- Bootstrap -->
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <!--<div class="acc"></div>-->
-	<div class="container">
+</head>
+<body>
+<!--<div class="acc"></div>-->
+<div class="container">
 	<div class="row  show-grid">
-  <div class="col-xs-12 col-sm-6 col-md-8">.col-xs-12 .col-sm-6 .col-md-8</div>
-  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
-</div>
-<div class="row  show-grid">
-  <div class="col-xs-6 col-sm-4">.col-xs-6 .col-sm-4</div>
-  <div class="col-xs-6 col-sm-4">.col-xs-6 .col-sm-4</div>
-  <!-- Optional: clear the XS cols if their content doesn't match in height -->
-  <div class="clearfix visible-xs-block"></div>
-  <div class="col-xs-6 col-sm-4">.col-xs-6 .col-sm-4</div>
-</div>
-
-<div class="row placeholders text-center">
-            <div class="col-xs-6 col-sm-3 fw">
-			
-			  <div class="imgstyle"></div>
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
-            </div>
-            <div class="col-xs-6 col-sm-3 fw">
-			<img alt="image" src="..." class="imgstyle" >
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
-            </div>
-            <div class="col-xs-6 col-sm-3 fw">
-			<img alt="image" src="..." class="imgstyle" >
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
-            </div>
-            <div class="col-xs-6 col-sm-3 fw">
-			<img alt="image" src="..." class="imgstyle" >
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
-            </div>
-          </div>
-
+		<div class="col-xs-12 col-sm-6 col-md-8">.col-xs-12 .col-sm-6 .col-md-8</div>
+		<div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+	</div>
+	<div class="row  show-grid">
+		<div class="col-xs-6 col-sm-4">.col-xs-6 .col-sm-4</div>
+		<div class="col-xs-6 col-sm-4">.col-xs-6 .col-sm-4</div>
+		<!-- Optional: clear the XS cols if their content doesn't match in height -->
+		<div class="clearfix visible-xs-block"></div>
+		<div class="col-xs-6 col-sm-4">.col-xs-6 .col-sm-4</div>
+	</div>
+	<div class="row placeholders text-center">
+		<div class="col-xs-6 col-sm-3 fw">
+			<div class="imgstyle"></div>
+			<h4>Label</h4>
+			<span class="text-muted">Something else</span> </div>
+		<div class="col-xs-6 col-sm-3 fw"> <img alt="image" src="..." class="imgstyle" >
+			<h4>Label</h4>
+			<span class="text-muted">Something else</span> </div>
+		<div class="col-xs-6 col-sm-3 fw"> <img alt="image" src="..." class="imgstyle" >
+			<h4>Label</h4>
+			<span class="text-muted">Something else</span> </div>
+		<div class="col-xs-6 col-sm-3 fw"> <img alt="image" src="..." class="imgstyle" >
+			<h4>Label</h4>
+			<span class="text-muted">Something else</span> </div>
+	</div>
+	<div class="new-tab">
+		<ul>
+			<li><a href="#option1">Option 1</a></li>
+			<li><a href="#option2">Option 2</a></li>
+			<li><a href="#option3">Option 3</a></li>
+			<li><a href="#option4">Option 4</a></li>
+			<li><a href="#option5">Option 5</a></li>
+			<li><a href="#option6">Option 5</a></li>
+		</ul>
+		<div id="option1">
+			<h1>Option 1</h1>
+			<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+			Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+			when an unknown printer took a galley of type and scrambled it to make a type 
+			specimen book.</p>
+		</div>
+		<div id="option2">
+			<h1>Option 2</h1>
+			<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+			Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+			when an unknown printer took a galley of type and scrambled it to make a type 
+			specimen book.</p>
+		</div>
+		<div id="option3">
+			<h1>Option 3</h1>
+			<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+			Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+			when an unknown printer took a galley of type and scrambled it to make a type 
+			specimen book.</p>
+		</div>
+		<div id="option4">
+			<h1>Option 4</h1>
+			<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+			Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+			when an unknown printer took a galley of type and scrambled it to make a type 
+			specimen book.</p>
+		</div>
+		<div id="option5">
+			<h1>Option 5</h1>
+			<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+			Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+			when an unknown printer took a galley of type and scrambled it to make a type 
+			specimen book.</p>
+		</div>
 	</div>
 	
 	
-	
+</div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
+<!-- Include all compiled plugins (below), or include individual files as needed --> 
+<script src="js/bootstrap.min.js"></script> 
+<script>
+	  $(document).ready(function(){
+		$('.new-tab').each(function(){
+    // For each set of tabs, we want to keep track of
+    // which tab is active and it's associated content
+	var $active, $content, $links = $(this).find('a');
+
+    // If the location.hash matches one of the links, use that as the active tab.
+    // If no match is found, use the first link as the initial active tab.
+	$active = $($links.filter('[href="'+location.hash+'"]')[1] || $links[0]);
+	$active.addClass('active');
+
+    $content = $($active[0].hash);
+
+    // Hide the remaining content
+    $links.not($active).each(function () {
+      $(this.hash).hide();
+    });
+
+    // Bind the click event handler
+    $(this).on('click', 'a', function(e){
+      // Make the old tab inactive.
+      $active.removeClass('active');
+      $content.hide();
+
+      // Update the variables with the new link and content
+      $active = $(this);
+      $content = $(this.hash);
+
+      // Make the tab active.
+      $active.addClass('active');
+      $content.show();
+
+      // Prevent the anchor's default click action
+      e.preventDefault();
+    });
+  });
+		
+	  });
+	</script>
+</body>
 </html>
